--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ tokio = { version = "1.17.0", features = ["full"] }
 serde = { version = "1.0.136", features = ["derive"] }
 serde_json = "1.0.79"
 log = "0.4.14"
+simple_logger = "2.1.0"
 anyhow = "1.0.53"
 getset = "0.1.2"
 chrono = "0.4.19"
