--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,4 +14,4 @@ log = "0.4.14"
 simple_logger = "2.1.0"
 anyhow = "1.0.53"
 getset = "0.1.2"
-chrono = "0.4.19"
+chrono = { version = "0.4.19", features = ["serde"] }
