--- a/action.yml
+++ b/action.yml
@@ -16,8 +16,8 @@ inputs:
     description: "Comma delimited list of user ID's to ignore"
     required: true
     default: "49699333"
-  github-alert-users:
-    description: "Comma delimited list of user ID's to show"
+  github-announced-users:
+    description: "Comma delimited list of user ID's to announce"
     required: false
     default: ""
   github-ignored-labels:
@@ -36,7 +36,7 @@ runs:
     GITHUB_REPOSITORIES: ${{ inputs.github-repositories }}
     GITHUB_TOKEN: ${{ inputs.github-token }}
     GITHUB_IGNORED_USERS: ${{ inputs.github-ignored-users }}
-    GITHUB_ALERT_USERS: ${{ inputs.github-alert-users }}
+    GITHUB_ANNOUNCED_USERS: ${{ inputs.github-announced-users }}
     GITHUB_IGNORED_LABELS: ${{ inputs.github-ignored-labels }}
     GOOGLE_WEBHOOK_URL: ${{ inputs.google-webhook-url }}
     SHOW_PR_AGE: ${{ inputs.show-pr-age }}
