--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,17 +1,20 @@
-name: Build Rust
+name: Check Rust
 
 on: [push, pull_request]
 
 jobs:
   build:
-    name: Build Rust
+    name: Check Rust
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: hecrj/setup-rust-action@v1.3.4
+      - uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
+      - name: Check
+        run: cargo check
+
+      - name: Check clippy lint
+        uses: clechasseur/rs-clippy-check@80bcfb7d14c9bb0415d025602b7fabcf9463becd # v3.0.4
         with:
-          rust-version: 1.58
-      - name: Build
-        run: cargo build
+          args: -- -D warnings
+
       - name: Test
         run: cargo test
