--- a/.github/workflows/publish-image.yml
+++ b/.github/workflows/publish-image.yml
@@ -3,7 +3,9 @@ name: Publish image to GHCR
 on:
   workflow_dispatch:
   push:
-    branches: main
+    branches:
+      - main
+      - ms-publish-docker
 
 jobs:
   publish:
