Set provenance: false

--- a/.github/workflows/publish-image.yml
+++ b/.github/workflows/publish-image.yml
@@ -38,4 +38,4 @@ jobs:
           tags: ghcr.io/guardian/actions-prnouncer:latest
           cache-from: type=gha
           cache-to: type=gha,mode=max
-          provenance: true
+          provenance: false
