--- a/.github/workflows/publish-image.yml
+++ b/.github/workflows/publish-image.yml
@@ -5,6 +5,7 @@ on:
   push:
     branches:
       - main
+      - "ms-publish-docker"
 
 jobs:
   publish:
@@ -13,7 +14,6 @@ jobs:
     permissions:
       contents: read
       packages: write
-      id-token: write
 
     steps:
       - name: Checkout
