--- a/action.yml
+++ b/action.yml
@@ -39,6 +39,6 @@ runs:
     GITHUB_ANNOUNCED_TEAM: ${{ inputs.github-announced-team }}
     GITHUB_ANNOUNCED_USERS: ${{ inputs.github-announced-users }}
     GITHUB_IGNORED_LABELS: ${{ inputs.github-ignored-labels }}
-    GITHUB_ALLOW_APPROVED: ${{ inputs.gituhb-allow-approved }}
+    GITHUB_ALLOW_APPROVED: ${{ inputs.github-allow-approved }}
     GOOGLE_WEBHOOK_URL: ${{ inputs.google-webhook-url }}
     SHOW_PR_AGE: ${{ inputs.show-pr-age }}
